fixing issue with invisible submit button on ios

--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -12,7 +12,7 @@ $secondary: rgba(49, 49, 49, 1);
 
 // *** GENERAL STYLES *** //
 :root {
-    font-size: 18px;
+  font-size: 18px;
 }
 body {
   margin: 0;
@@ -25,10 +25,12 @@ body {
   color: white;
   filter: drop-shadow(2px 16px 20px black);
 }
+button,
 input {
-    -webkit-appearance: none;
-    -moz-appearance: none;
-    appearance: none;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+  opacity: 1;
 }
 code {
   font-family: $code;
@@ -52,7 +54,6 @@ code {
   }
 }
 // ------------------------ //
-
 
 /* 
      #portal-box is the ID of the container which wraps 
@@ -93,9 +94,7 @@ code {
         caret-color: red;
         z-index: 1;
       }
-      
-          
-      
+
       .submit-btn {
         font-size: 1rem;
         font-family: $code;
@@ -121,7 +120,7 @@ code {
           0 14px 16px rgba(0, 0, 0, 0.15), 0 18px 32px rgba(0, 0, 0, 0.15);
       }
       .submit-btn:active {
-        transform: scale(.99) translateY(-.8rem)
+        transform: scale(0.99) translateY(-0.8rem);
       }
     }
   }
@@ -143,6 +142,7 @@ code {
       .exchange {
         box-sizing: border-box;
         padding: 2rem 3rem;
+        letter-spacing: 1.3;
         width: 100%;
         display: flex;
         flex-flow: column wrap;
@@ -150,7 +150,7 @@ code {
         background-color: $secondary;
         box-shadow: inset 0 4px 6px rgba(0, 0, 0, 0.15),
           inset 0 8px 10px rgba(0, 0, 0, 0.15);
-          
+
         font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
           monospace;
         h4 {
@@ -183,14 +183,13 @@ code {
           border-radius: 50%;
         }
         .icon {
-            transform: translateY(.16rem)
+          transform: translateY(0.16rem);
         }
       }
     }
   }
 }
 // ---------------------------------------------//
-
 
 // *** FOOTER *** //
 #footer-box {
@@ -219,59 +218,58 @@ code {
 }
 // ------------------------- //
 
-
 // *** MEDIA QUERIES *** //
 @media screen and(max-width: 1025px) {
-    :root {
-        font-size: 16px;
+  :root {
+    font-size: 16px;
 
-        #portal-box {
-            #history-section {
-                #history-box {
-                    .exchange {
-                        padding: 1rem 2rem;
-                    }
-                }
-            }
+    #portal-box {
+      #history-section {
+        #history-box {
+          .exchange {
+            padding: 1rem 2rem;
+          }
         }
+      }
     }
+  }
 }
 
 @media screen and (max-width: 769px) {
-    :root {
-        font-size: 14px;
-        #portal-box {
-            #history-section {
-                #history-box {
-                    .exchange {
-                        padding: .33rem .66rem;
-                    }
-                }
-            }
+  :root {
+    font-size: 14px;
+    #portal-box {
+      #history-section {
+        #history-box {
+          .exchange {
+            padding: 0.33rem 0.66rem;
+          }
         }
+      }
     }
+  }
 }
 
 @media screen and (max-width: 426px) {
-    :root {
-        font-size: 12px;
-        #portal-box {
-            #history-section {
-                #history-box {
-                    .exchange {
-                        padding: .33rem .66rem;
-                        h4 {
-                            margin-bottom: 3rem;
-                            max-width: 75%;
-                        }
-                        p {
-                            margin-top: 3rem;
-                            max-width: 75%;
-                        }
-                    }
-                }
+  :root {
+    font-size: 12px;
+    #portal-box {
+      #history-section {
+        #history-box {
+          .exchange {
+            padding: 0.33rem 0.66rem;
+            h4 {
+              margin-bottom: 3rem;
+              max-width: 75%;
             }
+            p {
+              margin-top: 3rem;
+              max-width: 75%;
+            }
+          }
         }
+      }
     }
+  }
 }
 // --------------------------END---------------------------------//
